docs: list PCI graphics drivers

--- a/thinkpad/T470.md
+++ b/thinkpad/T470.md
@@ -18,7 +18,41 @@ To benchmark the card, here's a [tutorial](https://linuxconfig.org/benchmark-you
 I didn't do this because it requires other stuff like gdebi and php7.
 
 
-# Driver Monitoring
+# Graphics Driver Monitoring
 In **System Settings** go to the **Driver Manager**
 
 There is also an Nvidia GUI in Start, which I don't know how to use yet.
+
+List All PCI Devices:
+`$: lspci -v`
+
+Intel Graphics:
+```shell
+00:02.0 VGA compatible controller: Intel Corporation HD Graphics 630 (rev 04) (prog-if 00 [VGA controller])
+        Subsystem: Lenovo HD Graphics 630
+        Flags: bus master, fast devsel, latency 0, IRQ 129
+        Memory at f2000000 (64-bit, non-prefetchable) [size=16M]
+        Memory at c0000000 (64-bit, prefetchable) [size=512M]
+        I/O ports at e000 [size=64]
+        Expansion ROM at 000c0000 [virtual] [disabled] [size=128K]
+        Capabilities: <access denied>
+        Kernel driver in use: i915
+        Kernel modules: i915
+```
+
+
+        
+Nvidia Geforce Graphics:
+```shell
+02:00.0 3D controller: NVIDIA Corporation GM108M [GeForce 940MX] (rev a2)
+        Subsystem: Lenovo GM108M [GeForce 940MX]
+        Flags: bus master, fast devsel, latency 0, IRQ 128
+        Memory at f3000000 (32-bit, non-prefetchable) [size=16M]
+        Memory at e0000000 (64-bit, prefetchable) [size=256M]
+        Memory at f0000000 (64-bit, prefetchable) [size=32M]
+        I/O ports at d000 [size=128]
+        Expansion ROM at <ignored> [disabled]
+        Capabilities: <access denied>
+        Kernel driver in use: nouveau
+        Kernel modules: nvidiafb, nouveau, nvidia_drm, nvidia
+```
