docs: rename file, add notes on Nvidia grafx

--- a/thinkpad/T470p.md
+++ b/thinkpad/T470p.md
@@ -18,6 +18,16 @@ To benchmark the card, here's a [tutorial](https://linuxconfig.org/benchmark-you
 I didn't do this because it requires other stuff like gdebi and php7.
 
 
+## Managing Nvidia Card
+Terminal: 
+`:prime-select`
+`:nvidia-smi`
+
+Via Muon:
+`nvidia-optimus`
+- widget which allows to switch between intel and nvidia with mouse
+
+
 # Graphics Driver Monitoring
 In **System Settings** go to the **Driver Manager**
 
